--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-recorder": "^1.0.0",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0"
   },
