--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-linkifier": "^3.0.1",
     "react-recorder": "git://github.com/hugo-cardenas/react-recorder.git#ec1e07fa785dd7fc108863c90500bbffe2fbd71a",
     "react-redux": "^5.0.5",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "verror": "^1.10.0"
   },
   "devDependencies": {
     "enzyme": "^2.8.2",
