--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-recorder": "git://github.com/hugo-cardenas/react-recorder.git#ec1e07fa785dd7fc108863c90500bbffe2fbd71a",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
+    "validate.js": "^0.11.1",
     "verror": "^1.10.0"
   },
   "devDependencies": {
