--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "joi": "^10.5.2",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
@@ -11,7 +12,6 @@
     "react-recorder": "git://github.com/hugo-cardenas/react-recorder.git#ec1e07fa785dd7fc108863c90500bbffe2fbd71a",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
-    "validate.js": "^0.11.1",
     "verror": "^1.10.0"
   },
   "devDependencies": {
