Connect the real Redux code with the React app. Fix lickUpdate validation, add tests

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "joi": "^10.5.2",
+    "joi-browser": "^10.0.6",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
