--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "joi-browser": "^10.0.6",
     "lodash": "^4.17.4",
+    "promisify-node": "^0.4.0",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
@@ -17,7 +18,8 @@
   "devDependencies": {
     "enzyme": "^2.8.2",
     "react-scripts": "1.0.5",
-    "react-test-renderer": "^15.5.4"
+    "react-test-renderer": "^15.5.4",
+    "tmp": "0.0.31"
   },
   "main": "src/electron-starter.js",
   "scripts": {
