--- a/package.json
+++ b/package.json
@@ -20,17 +20,25 @@
     "verror": "^1.10.0"
   },
   "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "enzyme": "^2.8.2",
+    "html-webpack-plugin": "^2.29.0",
     "react-scripts": "1.0.5",
     "react-test-renderer": "^15.5.4",
-    "tmp": "0.0.31"
+    "tmp": "0.0.31",
+    "webpack": "^3.0.0",
+    "webpack-dev-server": "^2.5.0"
   },
   "main": "src/electron-starter.js",
   "scripts": {
-    "react-start": "BROWSER=none react-scripts start",
+    "react-start": "webpack-dev-server --config ./config/webpack.config.js",
     "electron-start": "ELECTRON_DEV=1 electron .",
     "start": "concurrently 'npm run react-start' 'wait-on -c wait-on.config.json https://localhost:3000 && npm run electron-start'",
-    "build": "react-scripts build",
+    "build": "webpack --config ./config/webpack.config.js",
     "test": "react-scripts test --env=jsdom --testMatch='<rootDir>/test/**/*.test.js'",
     "eject": "react-scripts eject"
   }
