--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
+    "babel-jest": "^20.0.3",
     "babel-loader": "^7.1.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "enzyme": "^2.8.2",
     "html-webpack-plugin": "^2.29.0",
+    "jest": "^20.0.4",
     "react-scripts": "1.0.5",
     "react-test-renderer": "^15.5.4",
     "tmp": "0.0.31",
@@ -39,6 +41,6 @@
     "start-electron": "ELECTRON_DEV=1 electron .",
     "start": "concurrently 'npm run start-react' 'wait-on -c wait-on.config.json https://localhost:3000 && npm run start-electron'",
     "build": "webpack --config ./config/webpack.config.js",
-    "test": "react-scripts test --env=jsdom --testMatch='<rootDir>/test/**/*.test.js'"
+    "test": "NODE_PATH=. jest --config=./test/jest.config.json"
   }
 }
