--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "scripts": {
     "start-react": "webpack-dev-server --config ./config/webpack.config.js",
     "start-electron": "ELECTRON_DEV=1 electron .",
-    "start": "concurrently 'npm run start-react' 'wait-on -c wait-on.config.json https://localhost:3000 && npm run start-electron'",
+    "start": "concurrently 'npm run start-react' 'wait-on --config wait-on.config.json https://localhost:3000 && npm run start-electron'",
     "build": "webpack --config ./config/webpack.config.js",
     "test": "NODE_PATH=. jest --config=./test/jest.config.json"
   }
