Remove own stateStorage, use instead electron-json-storage

--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bluebird": "^3.5.0",
     "bulma": "^0.4.2",
     "electron": "^1.6.11",
+    "electron-json-storage": "^3.0.5",
     "extract-zip": "=1.6.0",
     "joi-browser": "^10.0.6",
     "lodash": "^4.17.4",
-    "promisify-node": "^0.4.0",
+    "pify": "^3.0.0",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
