--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "extract-zip": "=1.6.0",
     "joi-browser": "^10.0.6",
     "lodash": "^4.17.4",
+    "make-dir": "^1.0.0",
     "pify": "^3.0.0",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
