--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,13 +5,6 @@
         "es6": true,
         "node": true
     },
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": 8,
-        "sourceType": "module"
-    },
     "rules": {
         "constructor-super": "warn",
         "no-const-assign": "warn",
@@ -21,5 +14,15 @@
         "no-unused-vars": "warn",
         "semi": ["warn", "always"],
         "valid-typeof": "warn"
-    }
+    },
+    "parserOptions": {
+        "ecmaFeatures": {
+            "jsx": true
+        },
+        "ecmaVersion": 8,
+        "sourceType": "module"
+    },
+    "plugins": [
+        "react"
+    ]
 }
