--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-recorder": "git://github.com/hugo-cardenas/react-recorder.git#ec1e07fa785dd7fc108863c90500bbffe2fbd71a",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "verror": "^1.10.0"
   },
   "devDependencies": {
@@ -31,6 +32,8 @@
     "electron-installer-dmg": "^0.2.1",
     "electron-packager": "^8.7.2",
     "enzyme": "^2.8.2",
+    "eslint": "^4.1.1",
+    "eslint-plugin-react": "^7.1.0",
     "html-webpack-plugin": "^2.29.0",
     "jest": "^20.0.4",
     "react-scripts": "1.0.5",
