--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "blob-to-buffer": "^1.2.6",
-    "bulma": "^0.4.2",
+    "bulma": "^0.5.1",
     "cuid": "^1.3.8",
     "electron": "^1.6.11",
     "electron-json-storage": "^3.0.5",
@@ -15,6 +15,7 @@
     "pify": "^3.0.0",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
+    "react-autosuggest": "^9.3.2",
     "react-dom": "^15.5.4",
     "react-linkifier": "^3.0.1",
     "react-recorder": "git://github.com/hugo-cardenas/react-recorder.git#ec1e07fa785dd7fc108863c90500bbffe2fbd71a",
