--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-react": "^7.1.0",
     "html-webpack-plugin": "^2.29.0",
     "jest": "^20.0.4",
+    "randomcolor": "^0.5.3",
     "react-scripts": "1.0.5",
     "react-test-renderer": "^15.5.4",
     "tmp": "0.0.31",
