--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
     "verror": "^1.10.0"
   },
   "devDependencies": {
@@ -40,6 +41,7 @@
     "html-webpack-plugin": "^2.29.0",
     "jest": "^20.0.4",
     "randomcolor": "^0.5.3",
+    "react-addons-perf": "^15.4.2",
     "react-scripts": "1.0.5",
     "react-test-renderer": "^15.5.4",
     "tmp": "0.0.31",
