--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bulma": "^0.5.1",
     "cuid": "^1.3.8",
     "electron": "^1.6.11",
+    "electron-context-menu": "^0.9.1",
     "electron-json-storage": "^3.0.5",
     "extract-zip": "=1.6.0",
     "joi-browser": "^10.0.6",
