--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,13 @@
 {
     "presets": [
-        "es2015",
+        "env",
         "react"
     ],
     "plugins": [
-        "transform-object-rest-spread"
+        "transform-object-rest-spread",
+        ["transform-runtime", {
+            "polyfill": false,
+            "regenerator": true
+        }]
     ]
 }
