--- a/package.json
+++ b/package.json
@@ -30,26 +30,28 @@
     "babel-core": "^6.25.0",
     "babel-jest": "^20.0.3",
     "babel-loader": "^7.1.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2017": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "codecov": "^2.2.0",
     "create-dmg": "^1.3.0",
+    "css-loader": "^0.28.4",
     "electron-packager": "^8.7.2",
     "enzyme": "^2.8.2",
-    "eslint": "^4.1.1",
+    "eslint": "^4.9.0",
     "eslint-plugin-react": "^7.1.0",
     "html-webpack-plugin": "^2.29.0",
     "jest": "^20.0.4",
     "randomcolor": "^0.5.3",
     "react-addons-perf": "^15.4.2",
-    "react-scripts": "1.0.5",
     "react-test-renderer": "^15.5.4",
+    "style-loader": "^0.18.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "tmp": "0.0.31",
     "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.5.0",
+    "webpack-dev-server": "^2.9.2",
     "webpack-merge": "^4.1.0"
   },
   "main": "./dist/app",
