--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "codecov": "^2.2.0",
-    "create-dmg": "^1.3.0",
     "css-loader": "^0.28.4",
     "electron-packager": "^8.7.2",
     "enzyme": "^2.8.2",
@@ -65,5 +64,8 @@
     "build-dmg": "cd ./pkg/Lickit-darwin-x64 && (rm Lickit*.dmg || echo 'No previous dmg found') && create-dmg ./Lickit.app",
     "test": "NODE_PATH=. jest --config=./test/jest.config.json",
     "test-ci": "npm test -- --coverage && codecov"
+  },
+  "optionalDependencies": {
+    "create-dmg": "^2.0.0"
   }
 }
