--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "make-dir": "^1.0.0",
     "pify": "^3.0.0",
     "prop-types": "^15.5.10",
+    "radium": "^0.19.6",
     "react": "^15.5.4",
     "react-autosuggest": "^9.3.2",
     "react-dom": "^15.5.4",
