--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "pify": "^3.0.0",
     "prop-types": "^15.5.10",
     "radium": "^0.19.6",
-    "react": "^15.5.4",
+    "react": "^15.6.2",
     "react-autosuggest": "^9.3.2",
-    "react-dom": "^15.5.4",
-    "react-linkifier": "^3.0.1",
+    "react-dom": "^15.6.2",
+    "react-linkifier": "^3.1.1",
     "react-recorder": "git://github.com/hugo-cardenas/react-recorder.git#ec1e07fa785dd7fc108863c90500bbffe2fbd71a",
     "react-redux": "^5.0.5",
+    "react-tooltip": "^3.4.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
@@ -38,7 +39,7 @@
     "codecov": "^2.2.0",
     "css-loader": "^0.28.4",
     "electron-packager": "^8.7.2",
-    "enzyme": "^2.8.2",
+    "enzyme": "^2.9.1",
     "eslint": "^4.9.0",
     "eslint-plugin-react": "^7.1.0",
     "html-webpack-plugin": "^2.29.0",
