Update React components to new state structure

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
+    "sweetalert2": "^7.3.4",
     "verror": "^1.10.0"
   },
   "devDependencies": {
