--- a/package.json
+++ b/package.json
@@ -55,7 +55,11 @@
     "tmp": "0.0.31",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.9.2",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "@storybook/react": "^3.3.10",
+    "@storybook/addon-actions": "^3.3.10",
+    "@storybook/addon-links": "^3.3.10",
+    "@storybook/addons": "^3.3.10"
   },
   "main": "./dist/app",
   "prettier": {
@@ -73,7 +77,9 @@
     "start-electron": "ELECTRON_ENV=development electron ./src/app",
     "start-react": "webpack-dev-server --config ./config/webpack.dev.js",
     "test": "NODE_PATH=. jest --config=./test/jest.config.json",
-    "test-ci": "npm test -- --coverage && codecov"
+    "test-ci": "npm test -- --coverage && codecov",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "optionalDependencies": {
     "create-dmg": "^2.0.0"
