--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "electron-context-menu": "^0.9.1",
     "electron-json-storage": "^3.0.5",
     "extract-zip": "=1.6.0",
+    "font-awesome": "^4.7.0",
     "joi-browser": "^10.0.6",
     "lodash": "^4.17.4",
     "make-dir": "^1.0.0",
